# pseudoterminal

./: Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: rust.yml
examples/: bash.rs  blocking.rs  non_blocking.rs  shell.rs
examples/web-terminal/: index.html  main.rs  package-lock.json
src/: async.rs  blocking.rs  lib.rs  non_blocking.rs  sync.rs
src/pal/: mod.rs  unix.rs  windows.rs
src/sys/: unix.rs  windows.rs
tests/: blocking.rs  non_blocking.rs
