[package]
name = "pseudoterminal"
description = "A cross-platform pseudoterminal implementation with async support"
version = "0.1.1"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
# document all features
all-features = true

keywords = ["pty", "conpty", "terminal", "process"]
categories = ["asynchronous", "command-line-interface"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.32.0", default-features = false, features = [
  "process",
  "fs",
], optional = true }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.27.1", features = ["term", "ioctl", "process", "fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.0", features = [
  "Win32_System_Pipes",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
] }

[build-dependencies]
rustc_version = "0.4.0"

[features]
non-blocking = ["dep:tokio"]
