[package]
name = "pseudoterminal"
description = "A cross-platform pseudoterminal implementation with async support"
version = "0.1.1"
license = "MIT"
edition = "2024"
repository = "https://github.com/michaelvanstraten/pseudoterminal"

[package.metadata.docs.rs]
# document all features
all-features = true

keywords = ["pty", "conpty", "terminal", "process"]
categories = ["asynchronous", "command-line-interface"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.32.0", default-features = false, features = [
  "process",
  "fs",
], optional = true }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.27.1", features = ["term", "ioctl", "process", "fs"] }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
websocket = "0.27.1"

[features]
non-blocking = ["dep:tokio"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(CHANNEL_NIGHTLY)'] }
